--- a/chatApp/Base.lproj/Main.storyboard
+++ b/chatApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="IBj-f7-ul7">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
@@ -22,7 +22,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="H3S-WG-KQS" kind="presentation" id="nse-9p-lhN"/>
+                                    <segue destination="H3S-WG-KQS" kind="show" id="Oaw-d0-Jzy"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -32,9 +32,11 @@
                             <constraint firstAttribute="centerY" secondItem="nDz-6k-mdD" secondAttribute="centerY" id="5NY-cH-cyE"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="WcK-gu-zcO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1222.5" y="356"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="4KZ-t1-WGp">
@@ -72,7 +74,25 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tYc-wM-2ru" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="966" y="345"/>
+            <point key="canvasLocation" x="1884" y="345"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="iMv-Pw-3tF">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IBj-f7-ul7" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="jXV-DD-j4r">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="3rG-fo-AgK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vb9-2u-CRY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="378" y="-348"/>
         </scene>
     </scenes>
 </document>
